--- a/FichaVirtual/index.html
+++ b/FichaVirtual/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Ficha CoC</title>
         <!--Importing bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="./css/main.css" rel="stylesheet">
@@ -14,18 +15,210 @@
 
         <div class="container">
 
+            <br> <!-- Título da Ficha --> 
+            <h2>Investigador</h2>
+            <br>
+
+            <div class="persona-info">
+                <h3>Informações</h3>
+                <div class="row">
+                    <!-- Informações -->
+                    <div class="col 12 col-md-6">
+                        <div class="row">
+                            <!-- Linha 1 -->
+                            <div class="col-md-4">
+                                <label for="persona-nome">Nome:</label>
+                                <input type="text" id="persona-nome" class="form-control">
+                            </div>
+                            <div class="col-md-4">
+                                <label for="persona-prof">Profissão:</label>
+                                <input type="text" id="persona-prof" class="form-control">
+                            </div>
+                            <div class="col-md-4">
+                                <label for="persona-nasc">Naturalidade:</label>
+                                <input type="text" id="persona-nasc" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <!-- Linha 2 -->
+                            <div class="col-md-4">
+                                <label for="persona-resid">Residência:</label>
+                                <input type="text" id="persona-resid" class="form-control">
+                            </div>
+                            <div class="col-md-4">
+                                <label for="persona-prono">Pronome:</label>
+                                <input type="text" id="persona-prono" class="form-control">
+                            </div>
+                            <div class="col-md-4">
+                                <label for="persona-idade">Idade:</label>
+                                <input type="number" id="persona-idade" class="form-control" min="0">
+                            </div>
+                        </div>
+                    </div>
+                    <!--Imagem da personagem (em andamento)
+                    <div class="col-md-4">
+                        <input type="file" id="persona-img" class="form-control" accept="image/*">
+                    </div>
+                    -->
+                </div>
+            </div>
+
+            <br>
+
             <div class="row">
 
-                <div class="col-4">
+                <br>
+                <h3>Características</h3>
 
-                    <table>
+                <div class="col 12 col-md-6">
+
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Atributo</th>
+                                <th>Normal</th>
+                                <th>Bom</th>
+                                <th>Extremo</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>FOR</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-for"> </th>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                            <tr>
+                                <td>CON</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaHpMax()" id="valor-con"> </td>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                            <tr>
+                                <td>DES</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-des"> </td>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                            <tr>
+                                <td>INT</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-int"> </td>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                            <tr>
+                                <td>TAM</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaHpMax()" id="valor-tam"> </td>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                            <tr>
+                                <td>POD</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaMpMax()" id="valor-pod"> </td>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                            <tr>
+                                <td>APA</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-apa"> </td>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                            <tr>
+                                <td>EDU</td>
+                                <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-edu"> </td>
+                                <td class="valor-bom"></td>
+                                <td class=valor-extremo></td>
+                            </tr>
+                        </tbody>
                         
                     </table>
 
                 </div>
 
+                <!--Tabela de HP-->
+                <div class="col-4">
+
+                    <table class="table">
+                        <tr>
+                            <td> </td>
+                            <th>Máximos</th>
+                            <th>Atuais</th>
+                        </tr>
+                        <tr>
+                            <td>HP</td>
+                            <td class="hp-max"></td>
+                            <td> <input type="number" id="hp-atual" min="0" oninput="VerificaHp()"> </td>
+                        </tr>
+                    </table>
+                    <table class="table">
+                        <tr>
+                            <td> </td>
+                            <th>Máximos</th>
+                            <th>Atuais</th>
+                        </tr>
+                        <tr>
+                            <td>MP</td>
+                            <td class="mp-max"></td>
+                            <td> <input type="number" id="mp-atual" min="0" oninput="VerificaMp()"> </td>
+                        </tr>
+                    </table>
+                    <table class="table">
+                        <tr>
+                            <td> </td>
+                            <th>Inicial</th>
+                            <th>Atual</th>
+                        </tr>
+                        <tr>
+                            <td>Sorte</td>
+                            <td> <input type="number" id="sorte-ini" min="0" placeholder="50"> </td>
+                            <td> <input type="number" id="sorte-atual" min="0" placeholder="50"> </td>
+                        </tr>
+                    </table>
+                    <table class="table">
+                        <tr>
+                            <td> </td>
+                            <th>Inicial</th>
+                            <th>Atual</th>
+                            <th>Insanidade</th>
+                        </tr>
+                        <tr>
+                            <td>Sanidade</td>
+                            <td> <input type="number" id="san-ini" min="0" placeholder="50"> </td>
+                            <td> <input type="number" id="san-atual" min="0" placeholder="50" oninput="CalculaInsanidade(); VerificaSan()"> </td>
+                            <td class="insan"></td>
+                        </tr>
+                    </table>
+                </div>
+
             </div>
 
+        </div>
+
+        <div class="row">
+            <div class="col-6 col-md-2 text-center">
+                <label for="max-san-display">Max Sanity</label>
+                <table class="table" id="max-san-display">
+                    <tr>
+                        <td id="max-san"></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-6 col-md-2 text-center">
+
+            </div>
+            <div class="col-6 col-md-2 text-center">
+
+            </div>
+            <div class="col-6 col-md-2 text-center">
+
+            </div>
+            <div class="col-6 col-md-2 text-center">
+
+            </div>
+            <div class="col-6 col-md-2 text-center">
+
+            </div>
         </div>
 
         <!--Importing bootstrap's javascipt-->
