--- a/FichaVirtual/index.html
+++ b/FichaVirtual/index.html
@@ -8,11 +8,16 @@
         <!--Importing bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="./css/main.css" rel="stylesheet">
-        <script src="./scripts/script.js"></script>
+        <script src="./scripts/script.js" defer></script>
+        <script src="./scripts/hp.js" defer></script>
+        <script src="./scripts/mp.js" defer></script>
+        <script src="./scripts/sanidade.js" defer></script>
+        <script src="./scripts/skills.js" defer></script>
 
     </head>
     <body>
 
+        <!-- Informações -->
         <div class="container">
 
             <br> <!-- Título da Ficha --> 
@@ -22,7 +27,6 @@
             <div class="persona-info">
                 <h3>Informações</h3>
                 <div class="row">
-                    <!-- Informações -->
                     <div class="col 12 col-md-6">
                         <div class="row">
                             <!-- Linha 1 -->
@@ -136,9 +140,10 @@
 
                 </div>
 
-                <!--Tabela de HP-->
-                <div class="col-4">
+                <!--Tabelas com outras características-->
+                <div class="col-12 col-md-6">
 
+                    <!--HP-->
                     <table class="table">
                         <tr>
                             <td> </td>
@@ -151,6 +156,7 @@
                             <td> <input type="number" id="hp-atual" min="0" oninput="VerificaHp()"> </td>
                         </tr>
                     </table>
+                    <!--MP-->
                     <table class="table">
                         <tr>
                             <td> </td>
@@ -163,6 +169,7 @@
                             <td> <input type="number" id="mp-atual" min="0" oninput="VerificaMp()"> </td>
                         </tr>
                     </table>
+                    <!--Sorte-->
                     <table class="table">
                         <tr>
                             <td> </td>
@@ -175,6 +182,7 @@
                             <td> <input type="number" id="sorte-atual" min="0" placeholder="50"> </td>
                         </tr>
                     </table>
+                    <!--Sanidade-->
                     <table class="table">
                         <tr>
                             <td> </td>
@@ -185,40 +193,85 @@
                         <tr>
                             <td>Sanidade</td>
                             <td> <input type="number" id="san-ini" min="0" placeholder="50"> </td>
-                            <td> <input type="number" id="san-atual" min="0" placeholder="50" oninput="CalculaInsanidade(); VerificaSan()"> </td>
+                            <td> <input type="number" id="san-atual" min="0" placeholder="50" oninput="CalculaSanMax(); CalculaInsanidade(); VerificaSan()"> </td>
                             <td class="insan"></td>
                         </tr>
                     </table>
                 </div>
-
             </div>
-
         </div>
 
-        <div class="row">
-            <div class="col-6 col-md-2 text-center">
-                <label for="max-san-display">Max Sanity</label>
-                <table class="table" id="max-san-display">
-                    <tr>
-                        <td id="max-san"></td>
-                    </tr>
+        <!-- Estados e sanidade -->
+        <div class="container">
+            <div class="row d-flex flex-column flex-md-row">
+        
+                <!-- Sanidade Máxima -->
+                <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
+                    <label for="san-max-display" class="me-2">Sanidade Máxima</label>
+                    <table class="table mb-0" id="san-max-display">
+                        <tr>
+                            <td id="san-max"></td>
+                        </tr>
+                    </table>
+                </div>
+
+                <!-- Insanidade Temporária -->
+                <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
+                    <label for="insan-temp-display" class="me-2">Insanidade Temporária</label>
+                    <input type="checkbox" id="insan-temp-display">
+                </div>
+
+                <!-- Insanidade Indefinida -->
+                <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
+                    <label for="insan-indef-display" class="me-2">Insanidade Indefinida</label>
+                    <input type="checkbox" id="insan-indef-display">
+                </div>
+
+                <!-- Lesão Grave -->
+                <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
+                    <label for="lesao-grave-display" class="me-2">Lesão Grave</label>
+                    <input type="checkbox" id="lesao-grave-display">
+                </div>
+
+                <!-- Inconsciente -->
+                <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
+                    <label for="incons-display" class="me-2">Inconsciente</label>
+                    <input type="checkbox" id="incons-display">
+                </div>
+
+                <!-- Morrendo -->
+                <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center">
+                    <label for="dying-display" class="me-2">Morrendo</label>
+                    <input type="checkbox" id="dying-display">
+                </div>
+            </div>
+        </div>
+
+        <!-- Habilidades -->
+        <div class="container mt-5">
+            <h3>Habilidades</h3>
+            <!-- Barra de pesquisa -->
+            <div class="mb-3">
+                <input type="text" class="form-control" id="barra-pesquisa" placeholder="Pesquise habilidades..." oninput="PesquiseSkill()">
+            </div>
+
+            <div class="table-container">
+                <table class="table" id="tabela-hab">
+                   <thead>
+                        <tr>
+                            <th scope="col">Habilidade</th>
+                            <th scope="col">Normal</th>
+                            <th scope="col">Bom</th>
+                            <th scope="col">Extremo</th>
+                        </tr>
+                   </thead>
+                   <tbody>
+                    <!-- As habilidades são adicionadas aqui por meio de javascript -->
+                   </tbody>
                 </table>
-            </div>
-            <div class="col-6 col-md-2 text-center">
 
             </div>
-            <div class="col-6 col-md-2 text-center">
 
-            </div>
-            <div class="col-6 col-md-2 text-center">
-
-            </div>
-            <div class="col-6 col-md-2 text-center">
-
-            </div>
-            <div class="col-6 col-md-2 text-center">
-
-            </div>
         </div>
 
         <!--Importing bootstrap's javascipt-->
