--- a/FichaVirtual/index.html
+++ b/FichaVirtual/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Ficha CoC</title>
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <!--Importing bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="./css/main.css" rel="stylesheet">
@@ -259,6 +260,7 @@
                 <table class="table" id="tabela-hab">
                    <thead>
                         <tr>
+                            <th scope="col">Evoluir</th>
                             <th scope="col">Habilidade</th>
                             <th scope="col">Normal</th>
                             <th scope="col">Bom</th>
@@ -266,12 +268,34 @@
                         </tr>
                    </thead>
                    <tbody>
-                    <!-- As habilidades são adicionadas aqui por meio de javascript -->
+                    <!-- As habilidades são adicionadas aqui por meio de javascript, com a função CarregarSkills() -->
                    </tbody>
                 </table>
 
             </div>
 
+        </div>
+
+        <div class="container">
+            <br>
+            <h3>Combate</h3>
+            <br>
+        </div>
+
+        <!-- História -->
+        <div class="container">
+            <h3>História</h3>
+            <div class="container">
+            <label for="persona-hist">Minha história:</label>
+            <input type="textarea" id="persona-hist" class="form-control" rows="4" cols="50">
+            </div>
+            <div class="container">
+                <br>
+                <h4>Backstory</h4>
+                <br>
+
+
+            </div>
         </div>
 
         <!--Importing bootstrap's javascipt-->
