Update combate section
Atualização da seção de combate.

--- a/FichaVirtual/index.html
+++ b/FichaVirtual/index.html
@@ -278,15 +278,78 @@
 
     </div>
 
+    <!-- Combate -->
     <div class="container">
         <br>
         <h3>Combate</h3>
         <div class="container">
-            <label for="persona-hist">Minha história:</label>
-            <textarea class="form-control" id="persona-hist"></textarea>
+            <div class="col-10">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Arma</th>
+                            <th scope="col">Normal</th>
+                            <th scope="col">Bom</th>
+                            <th scope="col">Extremo</th>
+                            <th scope="col">Dano</th>
+                            <th scope="col">Ataques</th>
+                            <th scope="col">Alcance</th>
+                            <th scope="col">Pente</th>
+                            <th scope="col">Falha</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Briga (Luta)</td>
+                            <td id="briga-normal"></td>
+                            <td id="briga-bom"></td>
+                            <td id="briga-extremo"></td>
+                            <td>1D3 + DB</td>
+                            <td>1</td>
+                            <td>---</td>
+                            <td>---</td>
+                            <td>---</td>
+                        </tr>
+                        <tr>
+                            <td><textarea name="arma1" class="arma-textarea"></textarea></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <br>
     </div>
+        <br>
+    
 
     <!-- História -->
     <div class="container">
