Update html and css
Update com o resto da estrutura da ficha.

--- a/FichaVirtual/index.html
+++ b/FichaVirtual/index.html
@@ -284,67 +284,69 @@
         <h3>Combate</h3>
         <div class="row">
             <div class="col-12"> 
-                <table class="table" id="tabela-comb">
-                    <thead>
-                        <tr>
-                            <th scope="col">Arma</th>
-                            <th scope="col">Normal</th>
-                            <th scope="col">Bom</th>
-                            <th scope="col">Extremo</th>
-                            <th scope="col">Dano</th>
-                            <th scope="col">Ataques</th>
-                            <th scope="col">Alcance</th>
-                            <th scope="col">Pente</th>
-                            <th scope="col">Falha</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Briga (Luta)</td>
-                            <td id="briga-normal"></td>
-                            <td id="briga-bom"></td>
-                            <td id="briga-extremo"></td>
-                            <td>1D3 + DB</td>
-                            <td>1</td>
-                            <td>---</td>
-                            <td>---</td>
-                            <td>---</td>
-                        </tr>
-                        <tr>
-                            <td><textarea name="nome-arma1" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="normal-arma1" id="normal-arma1" min="0"></td>
-                            <td><input type="number" name="bom-arma1" id="bom-arma1" min="0"></td>
-                            <td><input type="number" name="extremo-arma1" id="extremo-arma1" min="0"></td>
-                            <td><textarea name="dano-arma1" id="dano-arma1" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="arma1-ats" id="arma1-ats" min="0"></td>
-                            <td><input type="number" name="arma1-alc" id="arma1-alc" min="0"></td>
-                            <td><input type="number" name="arma1-pente" id="arma1-pente" min="0"></td>
-                            <td><input type="number" name="arma1-falha" id="arma1-falha" min="0"></td>
-                        </tr>
-                        <tr>
-                            <td><textarea name="arma2" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="normal-arma2" id="normal-arma2" min="0"></td>
-                            <td><input type="number" name="bom-arma2" id="bom-arma2" min="0"></td>
-                            <td><input type="number" name="extremo-arma2" id="extremo-arma2" min="0"></td>
-                            <td><textarea name="dano-arma2" id="dano-arma2" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="arma2-ats" id="arma2-ats" min="0"></td>
-                            <td><input type="number" name="arma2-alc" id="arma2-alc" min="0"></td>
-                            <td><input type="number" name="arma2-pente" id="arma2-pente" min="0"></td>
-                            <td><input type="number" name="arma2-falha" id="arma2-falha" min="0"></td>
-                        </tr>
-                        <tr>
-                            <td><textarea name="arma3" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="normal-arma3" id="normal-arma3" min="0"></td>
-                            <td><input type="number" name="bom-arma3" id="bom-arma3" min="0"></td>
-                            <td><input type="number" name="extremo-arma3" id="extremo-arma3" min="0"></td>
-                            <td><textarea name="dano-arma3" id="dano-arma3" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="arma3-ats" id="arma3-ats" min="0"></td>
-                            <td><input type="number" name="arma3-alc" id="arma3-alc" min="0"></td>
-                            <td><input type="number" name="arma3-pente" id="arma3-pente" min="0"></td>
-                            <td><input type="number" name="arma3-falha" id="arma3-falha" min="0"></td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table" id="tabela-comb">
+                        <thead>
+                            <tr>
+                                <th scope="col">Arma</th>
+                                <th scope="col">Normal</th>
+                                <th scope="col">Bom</th>
+                                <th scope="col">Extremo</th>
+                                <th scope="col">Dano</th>
+                                <th scope="col">Ataques</th>
+                                <th scope="col">Alcance</th>
+                                <th scope="col">Pente</th>
+                                <th scope="col">Falha</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Briga (Luta)</td>
+                                <td id="briga-normal"></td>
+                                <td id="briga-bom"></td>
+                                <td id="briga-extremo"></td>
+                                <td>1D3 + DB</td>
+                                <td>1</td>
+                                <td>---</td>
+                                <td>---</td>
+                                <td>---</td>
+                            </tr>
+                            <tr>
+                                <td><textarea name="nome-arma1" class="arma-textarea"></textarea></td>
+                                <td><input type="number" name="normal-arma1" id="normal-arma1" min="0"></td>
+                                <td><input type="number" name="bom-arma1" id="bom-arma1" min="0"></td>
+                                <td><input type="number" name="extremo-arma1" id="extremo-arma1" min="0"></td>
+                                <td><textarea name="dano-arma1" id="dano-arma1" class="arma-textarea"></textarea></td>
+                                <td><input type="number" name="arma1-ats" id="arma1-ats" min="0"></td>
+                                <td><input type="number" name="arma1-alc" id="arma1-alc" min="0"></td>
+                                <td><input type="number" name="arma1-pente" id="arma1-pente" min="0"></td>
+                                <td><input type="number" name="arma1-falha" id="arma1-falha" min="0"></td>
+                            </tr>
+                            <tr>
+                                <td><textarea name="arma2" class="arma-textarea"></textarea></td>
+                                <td><input type="number" name="normal-arma2" id="normal-arma2" min="0"></td>
+                                <td><input type="number" name="bom-arma2" id="bom-arma2" min="0"></td>
+                                <td><input type="number" name="extremo-arma2" id="extremo-arma2" min="0"></td>
+                                <td><textarea name="dano-arma2" id="dano-arma2" class="arma-textarea"></textarea></td>
+                                <td><input type="number" name="arma2-ats" id="arma2-ats" min="0"></td>
+                                <td><input type="number" name="arma2-alc" id="arma2-alc" min="0"></td>
+                                <td><input type="number" name="arma2-pente" id="arma2-pente" min="0"></td>
+                                <td><input type="number" name="arma2-falha" id="arma2-falha" min="0"></td>
+                            </tr>
+                            <tr>
+                                <td><textarea name="arma3" class="arma-textarea"></textarea></td>
+                                <td><input type="number" name="normal-arma3" id="normal-arma3" min="0"></td>
+                                <td><input type="number" name="bom-arma3" id="bom-arma3" min="0"></td>
+                                <td><input type="number" name="extremo-arma3" id="extremo-arma3" min="0"></td>
+                                <td><textarea name="dano-arma3" id="dano-arma3" class="arma-textarea"></textarea></td>
+                                <td><input type="number" name="arma3-ats" id="arma3-ats" min="0"></td>
+                                <td><input type="number" name="arma3-alc" id="arma3-alc" min="0"></td>
+                                <td><input type="number" name="arma3-pente" id="arma3-pente" min="0"></td>
+                                <td><input type="number" name="arma3-falha" id="arma3-falha" min="0"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -394,23 +396,98 @@
             </div>
         </div>
 </div>
-    
-        <br>
-    
-
+<br>
     <!-- História -->
     <div class="container">
         <h3>História</h3>
         <div class="container">
-            <label for="persona-hist">Minha história:</label>
-            <textarea class="form-control" id="persona-hist"></textarea>
+            <label for="persona-hist">Minha história</label>
+            <textarea class="form-control" id="persona-hist" placeholder="Quem é você?"></textarea>
         </div>
         <div class="container">
             <br>
+            <!-- Backstory -->
             <h4>Backstory</h4>
             <div class="container">
-                <label for="persona-hist">Minha história:</label>
-                <textarea class="form-control" id="persona-hist"></textarea>
+                <div class="row">
+                    <!-- Descrição -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-desc">Descrição pessoal</label>
+                        <textarea class="form-control" id="persona-desc" rows="4" placeholder="Uma descrição física..."></textarea>
+                    </div>
+                    <!-- Traços -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-tracos">Traços</label>
+                        <textarea class="form-control" id="persona-tracos" rows="4" placeholder="Traços de personalidade..."></textarea>
+                    </div>
+                    <!-- Ideologias e Crenças -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-ideo">Ideologias e Crenças</label>
+                        <textarea class="form-control" id="persona-ideo" rows="4" placeholder="No que acredita, o que te motiva..."></textarea>
+                    </div>
+                    <!-- Ferimentos e Cicatrizes -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-feri">Ferimentos e Cicatrizes</label>
+                        <textarea class="form-control" id="persona-feri" rows="4" placeholder="Suas feridas e cicatrizes..."></textarea>
+                    </div>
+                    <!-- Pessoas significantes -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-signi">Pessoas significantes</label>
+                        <textarea class="form-control" id="persona-signi" rows="4" placeholder="Pessoas que significam algo, seja bom ou ruim..."></textarea>
+                    </div>
+                    <!-- Fobias e Manias -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-fob">Fobias e Manias</label>
+                        <textarea class="form-control" id="persona-fob" rows="4" placeholder="Suas fobias e manias..."></textarea>
+                    </div>
+                    <!-- Locais significativos -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-loc">Locais significativos</label>
+                        <textarea class="form-control" id="persona-loc" rows="4" placeholder="Quais locais lhe são queridos..."></textarea>
+                    </div>
+                    <!-- Tomos e Feitiços arcanos -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-tomos">Tomos e Feitiços arcanos</label>
+                        <textarea class="form-control" id="persona-tomos" rows="4" placeholder="Com quais tomos e feitiços você foi amaldiçoado..."></textarea>
+                    </div>
+                    <!-- Pertences importamtes -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-pert">Pertences importantes</label>
+                        <textarea class="form-control" id="persona-pert" rows="4" placeholder="O que lhe é importante, que você se recusa a perder..."></textarea>
+                    </div>
+                    <!-- Encontros -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-encon">Encontros com entidades estranhas</label>
+                        <textarea class="form-control" id="persona-encon" rows="4" placeholder="Quais pesadelos se tornaram reais..."></textarea>
+                    </div>
+                    <!-- Inventário -->
+                    <div class="col-12 col-md-6 mb-3">
+                        <label for="persona-inv">Inventário</label>
+                        <textarea class="form-control" id="persona-inv" rows="4" placeholder="O que você tem, o que você usa..."></textarea>
+                    </div>
+                    <!-- Economia -->
+                    <div class="col-md-6 col-12 mb-3">
+                        <label for="tabela-economias">Economias</label>
+                        <table class="table" id="tabela-economias">
+                            <tr>
+                                <td></td>
+                                <th>Valor</th>
+                            </tr>
+                            <tr>
+                                <th>Nível de gasto</th>
+                                <td><input type="number" name="nivel-gasto" id="nivel-gasto"></td>
+                            </tr>
+                            <tr>
+                                <th>Dinheiro</th>
+                                <td><input type="number" name="dinheiro" id="persona-din"></td>
+                            </tr>
+                            <tr>
+                                <th>Ativos</th>
+                                <td><textarea class="form-control" name="ativos" id="persona-ativ" rows="5" placeholder="Seus bens, economias, etc."></textarea></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
             <br>
 
@@ -418,6 +495,13 @@
         </div>
     </div>
 
+    <!-- Notas -->
+    <div class="container">
+        <h3>Notas</h3>
+        <div class="container">
+            <textarea class="form-control" id="Notas" placeholder="Coloque aqui o que quiser!" rows="15"></textarea>
+        </div>
+    </div>
     <!--Importing bootstrap's javascipt-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
